--- a/src/app/components/GlobalStyle/GlobalStyle.scss
+++ b/src/app/components/GlobalStyle/GlobalStyle.scss
@@ -1,3 +1,5 @@
+@import 'common/constants/colors';
+
 * {
   &:before,
   &:after,
@@ -20,6 +22,10 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+body {
+  color: $colorBlack;
 }
 
 #root {
